dataset1235/2025-2/1955397009/users/3921522300/executions/1686127217_1467685783.log
== SUBMISSION (2025-08-12 13:36:40)
-- CODE: 
conta = 20 * 35

print(conta)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
700
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 13:36:29)
-- CODE: 
conta 20 * 35

print(conta)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    conta 20 * 35
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    conta 20 * 35
          ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
